@@ -1,25 +1,3 @@
-2007-06-06  Gary Benson  <gbenson@redhat.com>
-
-	* j2se/make/common/shared/Platform.gmk:
-	Remove special case for ia64 that mirrors the default action.
-	Recognise ppc and s390 as 32-bit platforms.
-
-	* j2se/make/common/shared/Compiler-gcc.gmk:
-	Ensure REQUIRED_CC_VER is always set.
-
-	* hotspot/make/defs.make: Add ppc, ppc64, s390 and s390x.
-	* hotspot/build/linux/makefiles/buildtree.make: Likewise.
-	* hotspot/build/linux/makefiles/defs.make: Likewise.
-	* hotspot/build/linux/makefiles/gcc.make: Likewise.
-	* hotspot/src/share/vm/utilities/macros.hpp: Likewise.
-	* hotspot/src/share/vm/runtime/vm_version.cpp: Likewise.
-
-	* hotspot/make/Makefile:
-	Add rules to make interpreter-only builds.
-
-	* control/make/hotspot-rules.gmk:
-	Make interpreter-only builds on platforms without a JIT.
-
 diff -r 10dfd4e883b1 j2se/make/common/shared/Platform.gmk
 --- openjdk/j2se/make/common/shared/Platform.gmk	Wed May 30 17:05:50 2007 -0400
 +++ openjdk/j2se/make/common/shared/Platform.gmk	Fri Jun 01 11:47:18 2007 +0100
