@@ -1,3 +1,7 @@
+2007-06-15  Lillian Angel  <langel@redhat.com>
+
+	* patches/icedtea-ports.patch: Removed ChangeLog patch.
+
 2007-06-15  Francis Kung  <fkung@redhat.com>
 
 	* Makefile.am: Update patch locations.
